# money2

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt  run_all.py
.github/workflows/: scrape.yml
models/: __init__.py  appel_offre.py
scrapers/: anr.py  anrs.py  base_scraper.py  bpi_france.py  erc.py  fondation_alzheimer.py  fondation_arc.py  fondation_de_france.py  frm.py  horizon_europe.py  ihi.py  inca.py  inserm.py
scrapers/ars/: __init__.py
tests/: test_anr.py  test_anrs.py  test_ars.py  test_bpi_france.py  test_erc.py  test_extraction_quality.py  test_fondation_alzheimer.py  test_fondation_arc.py  test_fondation_de_france.py  test_frm.py  test_horizon_europe.py  test_ihi.py  test_inca.py  test_inserm.py  test_normalizer.py
tests/fixtures/: extraction_dataset.py
utils/: __init__.py  deduplicator.py  exporter.py  normalizer.py
